--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,6 +7,12 @@
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
+.navbar-logo{
   width: 40px;
+  margin-right: 10px;
+}
+
+.brand-name{
+  margin: 0;
+  // font-family: var(--bs-body-font-family)
 }
