--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,10 +17,10 @@
       <ul class="navbar-nav me-auto">
         <%# if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Cadastrar", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Cadastrar", "#", class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Entrar", "#", class: "nav-link" %>
+            <%= link_to "Entrar", new_user_session_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
