--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,12 @@
 // Specific CSS for your home-page
+.center-margin {
+  width: 500px;
+  margin: 0 auto;
+}
+
+.banner {
+  height: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("../../images/background.jpg");
+}
