--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,21 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<%= current_user.email if user_signed_in? %>
-<%= link_to 'signin', new_user_session_path %> |
-<%= link_to 'logout',  destroy_user_session_path, method: :delete %>
+<div class="banner">
+  <div class="container">
+    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-flat" href="#">Apply now</a>
+  </div>
+</div>
+
+
+
+
+
+<%# linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), %>
+
+<%# </div class= "container formulario-index center-margin text-center">
+  <h1>Cadastre-se para doar</h1>
+  <p>Contribua com a reconstrução de Petrópolis</p>
+  <%= current_user.email if user_signed_in? %>
+  <%# <%= link_to 'signin', new_user_session_path %> |
+  <%# <%= link_to 'logout',  destroy_user_session_path, method: :delete %>
+<%# </div> %>
