sos icon is now a link to home. access to some pages now require a logged user. added some links to facilitate navigation

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,9 @@
   <div class="container-fluid">
     <%# <%= link_to "#", class: "navbar-brand" do %>
       <div class="d-flex align-items-center">
-        <%= image_tag "logo_hands.png", class: "navbar-logo" %>
+        <%= link_to root_path do %>
+          <%= image_tag "logo_hands.png", class: "navbar-logo" %>
+        <% end %>
         <p class="brand-name">SOS Petrópolis</p>
       </div>
 
