--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 <%= current_user.email if user_signed_in? %>
-<%= link_to 'signin', new_user_session_path %> |
+<%= link_to 'campaigns', campaigns_path %> |
 <%= link_to 'logout',  destroy_user_session_path, method: :delete %>
