added cloudinary and a little css to visualize changes.

--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -6,6 +6,7 @@
   <%= simple_form_for [@campaign] do |f| %>
     <%= f.input :name %>
     <%= f.input :info %>
+    <%= f.input :image, as: :file %>
     <%= f.button :submit, class: 'btn btn-primary' %>
   <% end %>
 </div>
