--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,2 +1,3 @@
 <h1><%= @campaign.name %></h1>
+<%= cl_image_tag @campaign.image.key, height: 300, width: 400, crop: :fill %>
 <p><%= @campaign.info %></p>
