--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,7 @@
-<div class="banner">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://img.itinari.com/pages/images/original/ed7b3ab7-2234-403b-a8aa-2211dcd92990-istock-julio-ricco.jpg?ch=DPR&dpr=2.625&w=1600&s=0dcbcd13c18b6e0d66742d3bbe45c3df);">
   <div class="container">
-    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <a class="btn btn-flat" href="#">Apply now</a>
+    <h1>Colabore com a reconstrução da <strong>Cidade Imperial</strong></h1>
+    <p>Conheça as instituições para as quais você pode doar</p>
+    <%= link_to "Doe aqui", "#", class: "btn btn-flat" %>
   </div>
 </div>
-
-
-
-
-
-<%# linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), %>
-
-<%# </div class= "container formulario-index center-margin text-center">
-  <h1>Cadastre-se para doar</h1>
-  <p>Contribua com a reconstrução de Petrópolis</p>
-  <%= current_user.email if user_signed_in? %>
-  <%# <%= link_to 'signin', new_user_session_path %> |
-  <%# <%= link_to 'logout',  destroy_user_session_path, method: :delete %>
-<%# </div> %>
