--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,3 +1,8 @@
 <h1><%= @campaign.name %></h1>
-<%= cl_image_tag @campaign.image.key, height: 300, width: 400, crop: :fill %>
+
+<% if @campaign.image.attached? %>
+  <%= cl_image_tag @campaign.image.key, height: 300, width: 400, crop: :fill %>
+<% else %>
+  <%= image_tag 'teste.png' %>
+<% end %>
 <p><%= @campaign.info %></p>
