adc responsividade cards-home

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -18,7 +18,7 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 5px;
-  margin: 15px auto;
+  margin: 15px 0;
 }
 .card-trip:hover{
   box-shadow: 7px 7px 7px rgb(109, 103, 103);
