--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,9 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row cards-home">
 
-    <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="col-sm-6 col-lg-3">
       <div class="cards">
         <%= link_to campaigns_path do %>
           <div class="card-trip">
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="col-sm-6 col-lg-3">
       <div class="cards">
         <%= link_to campaigns_path do %>
           <div class="card-trip">
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="col-sm-6 col-lg-3">
       <div class="cards">
         <%= link_to campaigns_path do %>
           <div class="card-trip">
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="col-sm-6 col-lg-3">
       <div class="cards">
         <%= link_to campaigns_path do %>
           <div class="card-trip">
@@ -71,3 +71,7 @@
         <%end%>
       </div>
     </div>
+
+
+
+
