--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,8 +1,8 @@
-.cards-home{
-  display: flex;
-  justify-content: space-around;
-  padding: 20px;
-}
+// .cards-home{
+//   display: flex;
+//   justify-content: space-around;
+//   // padding: 20px;
+// }
 .cards{
   a{
     text-decoration: none;
