--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -39,6 +39,17 @@
   color: white;
 }
 
+.container-home{
+  margin: 0 15px;
+}
+// .card-trip {
+//   overflow: hidden;
+//   background: white;
+//   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+//   // width: 300px;
+//   border-radius: 5px;
+// }
+
 .card-trip > img {
   height: 200px;
   width: 100%;
