--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,7 @@
   </div>
 </div>
 
+<div class="container-home">
 <div class="row">
 
     <div class="col-sm-12 col-md-6 col-lg-3">
@@ -71,3 +72,5 @@
         <%end%>
       </div>
     </div>
+
+</div>
