Controller for donations done with new create and destroy

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,7 +1,44 @@
-<h1><%= @campaign.name %></h1>
-<% if @campaign.image.attached? %>
-  <%= cl_image_tag @campaign.image.key, height: 300, width: 400, crop: :fill %>
-<% else %>
-  <%= image_tag 'teste.png', class: 'w-25' %>
-<% end %>
-<p><%= @campaign.info %></p>
+<div class="container pt-5">
+  <div class="campaign d-flex flex-column align-items-center">
+    <h1><%= @campaign.name %></h1>
+    <% if @campaign.image.attached? %>
+      <%= cl_image_tag @campaign.image.key, height: 300, width: 400, crop: :fill %>
+    <% else %>
+      <%= image_tag 'teste.png', class: 'w-25' %>
+    <% end %>
+    <p><%= @campaign.info %></p>
+  </div>
+
+  <%= link_to 'Create a donation', new_campaign_donation_path(@campaign) %>
+
+  <% if @campaign.donations.count.positive? %>
+  <p>Donations:</p>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Type</th>
+          <th scope="col">Observation</th>
+          <th scope="col">Donator</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @campaign.donations.each_with_index do |donation, index| %>
+          <tr>
+            <th scope="row"><%= index + 1 %></th>
+            <td><%= donation.donation_type.upcase %></td>
+            <td><%= donation.observation %></td>
+            <td><%= donation.user.name %></td>
+            <td><%= link_to 'delete',
+                      donation_path(donation),
+                      method: :delete,
+                      data: {confirm: "Is this donation done?"}%></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <% else %>
+      <p>No donations yet :(</p>
+    <% end %>
+</div>
