--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="row cards-home">
+<div class="row">
 
     <div class="col-sm-6 col-lg-3">
       <div class="cards">
@@ -71,7 +71,3 @@
         <%end%>
       </div>
     </div>
-
-
-
-
