form in progress

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -10,3 +10,10 @@
 .form-control{
   background-color: white;
 }
+.link-password, .link-signup{
+  text-decoration: none;
+}
+.link-signup{
+  display: inline-block;
+  margin-top: 10px;
+}
