--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,20 +1,21 @@
+<div class="container">
+    <div class="container pt-5">
+      <div class="campaign d-flex flex-column align-items-center">
+        <h1><%= @campaign.name %></h1>
+        <% if @campaign.image.attached? %>
+          <%= cl_image_tag @campaign.image.key, height: 300, width: 400, crop: :fill %>
+        <% else %>
+          <%= image_tag 'placeholder.jpeg', class: 'w-25' %>
+        <% end %>
+        <p><%= @campaign.info %></p>
+        <p><%= @campaign.phone_number %></p>
+    </div>
+</div>
 
-<div class="container pt-5">
-  <div class="campaign d-flex flex-column align-items-center">
-    <h1><%= @campaign.name %></h1>
-    <% if @campaign.image.attached? %>
-      <%= cl_image_tag @campaign.image.key, height: 300, width: 400, crop: :fill %>
-    <% else %>
-      <%= image_tag 'placeholder.jpeg', class: 'w-25' %>
-    <% end %>
-    <p><%= @campaign.info %></p>
-    <p><%= @campaign.phone_number %></p>
-  </div>
-
-  <%= link_to 'Create a donation', new_campaign_donation_path(@campaign) %>
+  <%= link_to 'Doar para essa Instituição', new_campaign_donation_path(@campaign) %>
 
   <% if @campaign.donations.count.positive? %>
-  <p>Donations:</p>
+  <p>Doações:</p>
     <table class="table">
       <thead>
         <tr>
@@ -41,6 +42,6 @@
       </tbody>
     </table>
     <% else %>
-      <p>No donations yet :(</p>
+      <p>Nenhuma doação ainda</p>
     <% end %>
 </div>
