--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -1,8 +1,5 @@
-<h1>Teste de new</h1>
-
-<%= current_user.email %>
-
-<div class="container">
+<div class="container pt-5">
+<h1>Crie sua propria campanha:</h1>
   <%= simple_form_for [@campaign] do |f| %>
     <%= f.input :name %>
     <%= f.input :info %>
