btn new campaign done

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -28,4 +28,6 @@
       <% end %>
   </div>
 </div>
-<%= link_to 'Create a campaign', new_campaign_path %>
+<div class="btn-crate-new-campaign">
+  <%= link_to 'Criar uma nova campanha', new_campaign_path, class: "btn btn-primary" %>
+</div>
