--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -83,5 +83,11 @@
 .card-allcampaigns{
   text-decoration: none;
 }
-
-
+.btn-crate-new-campaign{
+  width: 300px;
+  margin: 15px auto;
+  text-align: center;
+  .btn{
+    padding: 10px;
+  }
+}
