--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,10 @@
-<h2>Forgot your password?</h2>
+<div class="container col-sm-6 col-md-6 col-lg-4  form-container">
+  <div class="login">
+    <h2>Esqueceu sua senha?</h2>
+  </div>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :email,
@@ -11,8 +14,11 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Enviar instruções para nova senha", class: "btn-cadastro btn btn-primary" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+  <div class="p-layout-form">
+    <p>Caso já tenha um cadastro clique em <%= render "devise/shared/links"%></p>
+  </div>
+</div>
