customize in progress

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,18 @@
-<div class="container">
-<div class="header d-flex align-items-center pt-5">
-  <% if current_user.picture.attached? %>
-    <%= image_tag current_user.picture, style: 'border-radius: 50%; width: 100px; height: 100px;' %>
-  <% else %>
-    <%= image_tag "avatar.png", class: "avatar dropdown-toggle ", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, style: 'border-radius: 50%; width: 100px; height: 100px;' %>
-  <% end %>
-  <div class="info mx-3">
-    <h3>Nome: <%= current_user.name %></h3>
-    <h4>Email: <%= current_user.email %></h4>
+<div class="header-user container">
+  <div class="header d-flex align-items-center pt-5">
+    <% if current_user.picture.attached? %>
+      <%= image_tag current_user.picture, style: 'border-radius: 50%; width: 100px; height: 100px;' %>
+    <% else %>
+      <%= image_tag "avatar.png", class: "avatar dropdown-toggle ", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, style: 'border-radius: 50%; width: 100px; height: 100px;' %>
+    <% end %>
+    <div class="info mx-3">
+      <h3>Nome: <%= current_user.name %></h3>
+      <h4>Email: <%= current_user.email %></h4>
+    </div>
   </div>
 </div>
 <!--------------------------------CAMPAIGNS------------------------------------>
+
 
   <div class="campaigns my-5">
     <h5>Minhas Campanhas:</h5>
