--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -8,22 +8,19 @@
       <% @campaigns.each_with_index do |campaign, index| %>
         <div class="col-sm-6 col-md-4 col-lg-3">
 
-            <div class="card-trip">
-                <% if campaign.image.attached? %>
-                  <%= cl_image_tag campaign.image.key, height: 300, width: 400, crop: :fill %>
-                  <% else %>
-                  <%= image_tag 'placeholder.jpeg' %>
-                  <% end %>
-                  <div class="card-body">
-                    <p>
-                      <%= index + 1 %> - <%= campaign.name %> |
-                      <%= campaign.info %> |
-                      <%= campaign.user.name %> |
-                      <%= link_to 'View', campaign_path(campaign), class: "card-allcampaigns" %>
-                    </p>
-                  </div>
-            </div>
-
+          <%= link_to campaign_path(campaign), class: "card-allcampaigns", style: 'text-decoration:none; color: black;' do %>
+          <div class="card-trip">
+              <% if campaign.image.attached? %>
+                <%= cl_image_tag campaign.image.key, height: 300, width: 400, crop: :fill %>
+                <% else %>
+                <%= image_tag 'placeholder.jpeg' %>
+                <% end %>
+                <div class="card-body">
+                  <%= index + 1 %> - <%= campaign.name %>
+                  <p><%= campaign.info %></p>
+                </div>
+          </div>
+          <% end %>
         </div>
       <% end %>
   </div>
