--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -28,6 +28,8 @@
       <% end %>
   </div>
 </div>
-<div class="btn-crate-new-campaign">
-  <%= link_to 'Criar uma nova campanha', new_campaign_path, class: "btn btn-primary" %>
-</div>
+<% if user_signed_in?%>
+  <div class="btn-crate-new-campaign">
+    <%= link_to 'Criar uma nova campanha', new_campaign_path, class: "btn btn-primary" %>
+  </div>
+<% end %>
