layout form new campaign

--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a new donation: </h1>
+<h1>Faça uma nova doação</h1>
 
 <div class="container">
   <%= simple_form_for [@campaign, @donation] do |f| %>
