--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,9 +1,11 @@
-<h1>Faça uma nova doação</h1>
+<div class="container col-sm-6 col-md-6 col-lg-4  form-container">
+  <div class="login">
 
-<div class="container">
+  <div class="mb-4"><h1 >Faça uma nova doação</h1></div>
+  </div>
   <%= simple_form_for [@campaign, @donation] do |f| %>
-    <%= f.input :donation_type, :placeholder => 'Cash, Food or Clothes only' %>
-    <%= f.input :observation %>
-    <%= f.button :submit, class: 'btn btn-primary' %>
+    <%= f.input :donation_type, label:"Tipo de doação", :placeholder => 'Dinheiro, Comida ou roupa' %>
+    <%= f.input :observation, label: "Observação" %>
+    <%= f.button :submit, "Doar", class: 'btn-cadastro btn btn-primary' %>
   <% end %>
 </div>
