--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -3,8 +3,9 @@
 <div class="container">
 
   <%= simple_form_for [@campaign, @donation] do |f| %>
-    <%= f.input :donation_type, collection: %w[Dinheiro Comida Roupas] %>
-    <%= f.input :observation %>
-    <%= f.button :submit, class: 'btn btn-primary' %>
+    <%= f.input :donation_type, label: 'Tipo da doação', collection: %w[Dinheiro Comida Roupas] %>
+    <%= f.input :quantity, input_html: { min: '0', step: 10 }, label: 'Quantidade' %>
+    <%= f.input :observation, label: 'Observação' %>
+    <%= f.button :submit, 'Fazer Doação', class: 'btn btn-primary' %>
   <% end %>
 </div>
