--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,11 @@
     <h1>Colabore com a reconstrução da <strong>Cidade Imperial</strong></h1>
     <p>Conheça as instituições para as quais você pode doar</p>
     <%= link_to "Doe aqui", "#", class: "btn btn-flat" %>
+    <div class="effetc-js">
+      <p>
+        <span data-controller="typed-js"></span>
+      </p>
+    </div>
   </div>
 </div>
 
