--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,10 @@
     <h1>Colabore com a reconstrução da <strong>Cidade Imperial</strong></h1>
     <p>Conheça as instituições para as quais você pode doar</p>
     <%= link_to "Doe aqui", "#", class: "btn btn-flat" %>
-    <div class="effetc-js">
-      <p>
-        <span data-controller="typed-js"></span>
-      </p>
+    <div class="effetc-js mt-5">
+
+        <span id="typed" data-controller="typed-js"></span>
+      
     </div>
   </div>
 </div>
