--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -61,7 +61,7 @@
 }
 
 .card-trip {
-  height: 300px;
+  height: 20rem;
 }
 
 .card-trip .card-trip-infos {
@@ -70,6 +70,7 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  overflow-y: auto;
 }
 
 
