--- a/app/assets/stylesheets/pages/users.scss
+++ b/app/assets/stylesheets/pages/users.scss
@@ -1,4 +1,14 @@
+.container-user{
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgba(173, 167, 167, 0.685);
+  border-radius: 5px;
+  box-shadow: 7px 7px 7px rgb(184, 180, 180);
+  margin-top: 40px;
+  padding: 40px;
+}
+
 .header-user{
   justify-content: center;
+  justify-content: space-between;
   margin: 0 auto;
 }
