almost done with carousel

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,25 +14,8 @@
   </div>
 </div>
 
-<div class="container-home">
-  <div class="row">
-      <% @campaigns.each_with_index do |campaign| %>
-        <div class="col-sm-6 col-md-4 col-lg-3">
 
-          <%= link_to campaign_path(campaign), class: "card-allcampaigns", style: 'text-decoration:none; color: black;' do %>
-          <div class="card-trip">
-              <% if campaign.image.attached? %>
-                <%= cl_image_tag campaign.image.key, height: 300, width: 400, crop: :fill %>
-                <% else %>
-                <%= image_tag 'placeholder.jpeg' %>
-                <% end %>
-                <div class="card-body">
-                  <%= campaign.name %>
-                  <p><%= campaign.info %></p>
-                </div>
-          </div>
-          <% end %>
-        </div>
-      <% end %>
-  </div>
+<div class="container-home">
+  <%= render 'shared/carousel', campaigns: @campaigns %>
+</div>
 </div>
